# rest-api-actix-deadpool

./: Cargo.toml  README.md
src/: README.md  lib.rs  main.rs
src/services/: employee_service.rs  health_check_service.rs  mod.rs
src/user/: model.rs
src/util/: my_error.rs
