[package]
name = "rest-api-actix-deadpool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-rc.3"
deadpool-postgres = "0.10.1"
tokio-postgres = "0.7.5"
serde = "1.0.136"
serde_json = "1.0"