[package]
name = "rest-api-actix-deadpool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-rc.3"
deadpool-postgres = "0.10.1"
tokio-postgres = {version = "0.7.5", features=["with-chrono-0_4"]}
serde = {version = "1.0.136", features = ["derive"]}
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
derive_more = "0.99.17"